deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-deployment
  labels:
    app: deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: deployment
  template:
    metadata:
      labels:
        app: deployment
    spec:
      containers:
        - name: deployment
          image: registry.cluster.wik.cloud/public/echo
          ports:
            - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
